; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_spool.c_MkSpoolDir.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_spool.c_MkSpoolDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@gOurDirectoryPath = common dso_local global i8* null, align 8
@kSpoolDir = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MkSpoolDir(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.stat, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i8*, i8** %4, align 8
  store i8 0, i8* %7, align 1
  %8 = load i8*, i8** @gOurDirectoryPath, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load i32, i32* @kSpoolDir, align 4
  %17 = call i32 @OurDirectoryPath(i8* %14, i64 %15, i32 %16)
  %18 = load i8*, i8** %4, align 8
  %19 = call i64 @stat(i8* %18, %struct.stat* %6)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %13
  %22 = load i8*, i8** %4, align 8
  %23 = call i64 @MkDirs(i8* %22, i32 448)
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %21
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @perror(i8* %26)
  store i32 -1, i32* %3, align 4
  br label %30

28:                                               ; preds = %21, %13
  store i32 0, i32* %3, align 4
  br label %30

29:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %28, %25
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @OurDirectoryPath(i8*, i64, i32) #1

declare dso_local i64 @stat(i8*, %struct.stat*) #1

declare dso_local i64 @MkDirs(i8*, i32) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
